Adiciona o item wpa2-wordlists na aba de wordlists

--- a/README.html
+++ b/README.html
@@ -62,9 +62,7 @@
 
 <p>Código totalmente refeito</p>
 
-<p>item "KALI" removido da aba de ferramentas</p>
-
-<p>item "DOSER" adicionado na aba de DoS</p>
+<p>Novas ferramentas adicionadas</p>
 
 <br>
 
