Update na instalação do KITH

--- a/README.html
+++ b/README.html
@@ -34,7 +34,7 @@
 
 <p>apt upgrade</p>
 
-<p>apt install python</p>
+<p>pkg install python</p>
 
 <p>apt install git</p>
 
@@ -68,7 +68,7 @@
 
 <p>FOTO DA INTERFACE</p>
 
-<img src="foto_kith_2.0.jpg" alt="foto da interface do kith" width="100%">
+<img src="foto_kith_2.0.jpg" alt="foto da interface do kith" width="90%">
 
 
 </body>
